@@ -50,7 +50,6 @@ Licensed under the MIT License.
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation=com.azure.cosmos.kafka.connect
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.routing=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.apachecommons.lang=ALL-UNNAMED
-      --add-exports com.azure.cosmos/com.azure.cosmos.implementation=com.azure.cosmos.kafka.connect
     </javaModulesSurefireArgLine>
   </properties>
 
